added a new change

--- a/index.html
+++ b/index.html
@@ -20,16 +20,23 @@
             </div>
             <nav>
                 <a href="index.html" class="active">Home</a>
-                <a href="#" class="list">My List</a>
-                   <div class="list-container">
-                       <ul>
-                           <li>Release-Year</li>
-                           <li>My Top 10</li>
-                           <li>Continue Watching</li>
-                           <li>Top-Rated</li>
-                           <li>New Releases</li>
-                       </ul>
-                   </div>
+                <a href="#" class="list" id="list">My List
+                    <div class="list-container">
+                        <ul>
+                            <li>Release-Year</li>
+                            <hr>
+                            <li>My Top 10</li>
+                            <hr>
+                            <li>Continue Watching</li>
+                            <hr>
+                            <li>Top-Rated</li>
+                            <hr>
+                            <li>New Releases</li>
+                            <hr>
+                        </ul>
+                    </div>
+                </a>
+                  
                 <a href="#">Tv Shows</a>
                 <a href="#">Recently added</a>
                 <a href="#">All</a>
